--- a/class_2019-03-14.Rmd
+++ b/class_2019-03-14.Rmd
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(echo = FALSE)
 library(tidyverse)
 
 library(devtools)
+#devtools::install_github("kjhealy/socviz")
 
 x <- read_csv("https://pollofpolls.eu/get/polls/ES-parliament/format/csv")
 ```
@@ -41,6 +42,7 @@ good_firms <- x %>%
 
 x %>% 
   filter(firm %in% good_firms) %>% 
-  filter(date > Sys.Date() - 365) %>%
+  filter(date > Sys.Date() - 365)) %>%
+  gather(key = "party", value = )
   
 ```
