--- a/class_2019-03-14.Rmd
+++ b/class_2019-03-14.Rmd
@@ -40,9 +40,21 @@ good_firms <- x %>%
   
 # Filter out data that we want to use and send it to the plot.
 
-x %>% 
+y <- x %>% 
   filter(firm %in% good_firms) %>% 
-  filter(date > Sys.Date() - 365)) %>%
-  gather(key = "party", value = )
+  filter(date > Sys.Date() - 365) %>%
+  gather(key = "party", value = "poll", PP:PDeCAT)
   
+#y %>% sample_n(10)
+
+#y$date <- cut(y$date, breaks = "month")
+
+#y$date = month(y$date)
+
+y %>% filter(party %in% c("PSOE", "Cs", "PP", "Podemos", "VOX")) %>% 
+  ggplot(aes(x = date, y = poll, color = party)) +
+  geom_point() +
+  geom_smooth(se = FALSE)
+
+
 ```
